update frontend interview

--- a/event.html
+++ b/event.html
@@ -10,20 +10,19 @@
             width: 100%;
             height: 500px;
             background-color: skyblue;
+            color: blue !important;
         }
     </style>
 </head>
 <body>
-    <div onclick="onEvent()">
-        <p>事件1</p>
-        <p>事件2</p>
-        <p>事件3</p>
-    </div>
-
+    <div style="color: red">1</div>
     <script>
-        function onEvent() {
-            console.log('事件触发了');
-        }
+    let div1 = document.getElementsByTagName('div')[0]
+    div1.innerText = 'time.geekbang'
+ 
+    let div2 = document.getElementsByTagName('div')[1]
+    div2.innerText = 'time.geekbang.com'
     </script>
+    <div>test</div>
 </body>
 </html>
